--- a/user/wm/hyprland/confs/custom.conf
+++ b/user/wm/hyprland/confs/custom.conf
@@ -1,3 +1,7 @@
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
 $scratchpadsize = size 80% 85%
 
 $scratchpad = class:^(scratchpad)$
