--- a/user/wm/hyprland/confs/environment.conf
+++ b/user/wm/hyprland/confs/environment.conf
@@ -1,2 +1,6 @@
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
 env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 env = QT_QPA_PLATFORMTHEME,qt5ct
