--- a/user/wm/hyprland/confs/layout.conf
+++ b/user/wm/hyprland/confs/layout.conf
@@ -1,1 +1,5 @@
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
 layerrule = blur,waybar
