--- a/user/wm/hyprland/confs/misc.conf
+++ b/user/wm/hyprland/confs/misc.conf
@@ -1,3 +1,8 @@
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
+
 misc {
   disable_hyprland_logo = true
   mouse_move_enables_dpms = false
