--- a/user/wm/hyprland/confs/monitor.conf
+++ b/user/wm/hyprland/confs/monitor.conf
@@ -1,1 +1,6 @@
-source = ~/dotfiles/user/wm/hyprland/conf/monitors/notebook.conf
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
+
+source = ~/.dotfiles/user/wm/hyprland/confs/monitors/notebook.conf
