--- a/user/wm/hyprland/confs/keyboard.conf
+++ b/user/wm/hyprland/confs/keyboard.conf
@@ -1,3 +1,8 @@
+# ----------------------------------------------------- 
+# Cursor
+# ----------------------------------------------------- 
+
+
 input {
   kb_layout = br
   kb_options = caps:escape
