--- a/user/wm/hyprland/confs/monitor.conf
+++ b/user/wm/hyprland/confs/monitor.conf
@@ -3,4 +3,4 @@
 # ----------------------------------------------------- 
 
 
-source = ~/.dotfiles/user/wm/hyprland/confs/monitors/notebook.conf
+source ~/.dotfiles/user/wm/hyprland/confs/monitors/notebook.conf
