--- a/user/wm/hyprland/confs/windowrule.conf
+++ b/user/wm/hyprland/confs/windowrule.conf
@@ -2,6 +2,13 @@
 # Windows Rule
 # ----------------------------------------------------- 
 
+
+$scratchpadsize = size 80% 85%
+$scratchpad = class:^(scratchpad)$
+$pavucontrol = class:^(pavucontrol)$
+$miniframe = title:\*Minibuf.*
+
+
 windowrulev2 = float,$scratchpad
 windowrulev2 = $scratchpadsize,$scratchpad
 windowrulev2 = workspace special silent,$scratchpad
