--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -2,110 +2,67 @@
 # KeyBindings
 # ----------------------------------------------------- 
 
+# SUPER KEY
+$mainMod = SUPER
+$shiftKey = SHIFT
+$alttKey = ALT
 
-bind=SUPER,SPACE,fullscreen,1
-bind=SUPERSHIFT,F,fullscreen,0
-bind=SUPER,Y,workspaceopt,allfloat
-bind=ALT,TAB,cyclenext
-bind=ALT,TAB,bringactivetotop
-bind=ALTSHIFT,TAB,cyclenext,prev
-bind=ALTSHIFT,TAB,bringactivetotop
-bind=SUPER,TAB,exec,pypr expose
-bind=SUPER,V,exec,wl-copy $(wl-paste | tr '\n' ' ')
-bind=SUPERSHIFT,T,exec,screenshot-ocr
 
-bind = SUPER,R,pass,^(com\.obsproject\.Studio)$
-bind = SUPERSHIFT,R,pass,^(com\.obsproject\.Studio)$
+# Windows
+bind = $mainMod, Q, killactive
+bind = $mainMod, SPACE, fullscreen, 1
+bind = $mainMod, $shiftKey, F, fullscreen, 0
+bind = ALT, TAB, cyclenext
+bind = ALT, TAB, bringactivetotop
+bind = SUPER, T, togglefloating
+bind = $mainMod, SHIFT, right, resizeactive, 100 0
+bind = $mainMod, SHIFT, left, resizeactive, -100 0
+bind = $mainMod, SHIFT, up, resizeactive, 0 -100
+bind = $mainMod, SHIFT, down, resizeactive, 0 100
+bind = SUPERSHIFT, T, exec, screenshot-ocr
+bindm = SUPER,mouse:272,movewindow
+bindm = SUPER,mouse:273,resizewindow
 
-bind=SUPER,RETURN,exec,'' + userSettings.term + ''
+# Control Services 
+bind = SUPERCTRL,R,exec,killall .waybar-wrapped && waybar & disown
+bind = SUPERSHIFT,Q,exit
+bind = SUPERSHIFT,S,exec,systemctl suspend
+bind = SUPERCTRL,L,exec,loginctl lock-session
 
-bind=SUPER,A,exec,'' + userSettings.spawnEditor + ''
 
-bind=SUPER,S,exec,'' + userSettings.browser + ''
-
-bind=SUPERCTRL,S,exec,container-open # qutebrowser only
-
-bind=SUPERCTRL,R,exec,killall .waybar-wrapped && waybar & disown
-
-bind=SUPER,code:47,exec,fuzzel
-bind=SUPER,X,exec,fnottctl dismiss
-bind=SUPERSHIFT,X,exec,fnottctl dismiss all
-bind=SUPER,Q,killactive
-bind=SUPERSHIFT,Q,exit
-bindm=SUPER,mouse:272,movewindow
-bindm=SUPER,mouse:273,resizewindow
-bind=SUPER,T,togglefloating
-bind=SUPER,G,exec,hyprworkspace 9; pegasus-fe;
-bind=,code:148,exec,''+ userSettings.term + " "+''-e numbat
-
-bind=,code:107,exec,grim -g "$(slurp)"
-bind=SHIFT,code:107,exec,grim -g "$(slurp -o)"
-bind=SUPER,code:107,exec,grim
-bind=CTRL,code:107,exec,grim -g "$(slurp)" - | wl-copy
-bind=SHIFTCTRL,code:107,exec,grim -g "$(slurp -o)" - | wl-copy
-bind=SUPERCTRL,code:107,exec,grim - | wl-copy
-
-bind=,code:122,exec,pamixer -d 10
-bind=,code:123,exec,pamixer -i 10
-bind=,code:121,exec,pamixer -t
-bind=,code:256,exec,pamixer --default-source -t
-bind=SHIFT,code:122,exec,pamixer --default-source -d 10
-bind=SHIFT,code:123,exec,pamixer --default-source -i 10
-bind=,code:232,exec,brightnessctl set 15-
-bind=,code:233,exec,brightnessctl set +15
-bind=,code:237,exec,brightnessctl --device='asus::kbd_backlight' set 1-
-bind=,code:238,exec,brightnessctl --device='asus::kbd_backlight' set +1
-bind=,code:255,exec,airplane-mode
-bind=SUPER,C,exec,wl-copy $(hyprpicker)
-
-bind=SUPERSHIFT,S,exec,systemctl suspend
-bindl=,switch:on:Lid Switch,exec,loginctl lock-session
-bind=SUPERCTRL,L,exec,loginctl lock-session
-
-bind=SUPER,H,movefocus,l
-bind=SUPER,J,movefocus,d
-bind=SUPER,K,movefocus,u
-bind=SUPER,L,movefocus,r
-
-bind=SUPERSHIFT,H,movewindow,l
-bind=SUPERSHIFT,J,movewindow,d
-bind=SUPERSHIFT,K,movewindow,u
-bind=SUPERSHIFT,L,movewindow,r
-
-bind=SUPER,1,exec,hyprworkspace 1
-bind=SUPER,2,exec,hyprworkspace 2
-bind=SUPER,3,exec,hyprworkspace 3
-bind=SUPER,4,exec,hyprworkspace 4
-bind=SUPER,5,exec,hyprworkspace 5
-bind=SUPER,6,exec,hyprworkspace 6
-bind=SUPER,7,exec,hyprworkspace 7
-bind=SUPER,8,exec,hyprworkspace 8
-bind=SUPER,9,exec,hyprworkspace 9
-
+# Workspaces
 bind=SUPERCTRL,right,exec,hyprnome
 bind=SUPERCTRL,left,exec,hyprnome --previous
 bind=SUPERSHIFT,right,exec,hyprnome --move
 bind=SUPERSHIFT,left,exec,hyprnome --previous --move
 
-bind=SUPERSHIFT,1,movetoworkspace,1
-bind=SUPERSHIFT,2,movetoworkspace,2
-bind=SUPERSHIFT,3,movetoworkspace,3
-bind=SUPERSHIFT,4,movetoworkspace,4
-bind=SUPERSHIFT,5,movetoworkspace,5
-bind=SUPERSHIFT,6,movetoworkspace,6
-bind=SUPERSHIFT,7,movetoworkspace,7
-bind=SUPERSHIFT,8,movetoworkspace,8
-bind=SUPERSHIFT,9,movetoworkspace,9
+bind = SUPER,1,exec,hyprworkspace 1
+bind = SUPER,2,exec,hyprworkspace 2
+bind = SUPER,3,exec,hyprworkspace 3
+bind = SUPER,4,exec,hyprworkspace 4
+bind = SUPER,5,exec,hyprworkspace 5
+bind = SUPER,6,exec,hyprworkspace 6
+bind = SUPER,7,exec,hyprworkspace 7
+bind = SUPER,8,exec,hyprworkspace 8
+bind = SUPER,9,exec,hyprworkspace 9
 
+# APPS - bringactivetotop
 bind=SUPER,Z,exec,pypr toggle term && hyprctl dispatch bringactivetotop
 bind=SUPER,F,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
 bind=SUPER,N,exec,pypr toggle musikcube && hyprctl dispatch bringactivetotop
 bind=SUPER,B,exec,pypr toggle btm && hyprctl dispatch bringactivetotop
-bind=SUPER,code:172,exec,pypr toggle pavucontrol && hyprctl dispatch bringactivetotop
+bind=SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
+bind=SUPER,N,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
+bind=SUPER,V,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 
-bind=SUPER,code:21,exec,pypr zoom
-bind=SUPER,code:21,exec,hyprctl reload
-
-bind=SUPER,I,exec,networkmanager_dmenu
+# Menu do FUZZEL 
 bind=SUPER,P,exec,keepmenu
 bind=SUPERSHIFT,P,exec,hyprprofile-dmenu
+bind = $mainMod, P, exec, fuzzel
+
+# Passthrough SUPER KEY to Virtual Machine
+bind = $mainMod, P, submap, passthru
+submap = passthru
+bind = SUPER, Escape, submap, reset
+submap = reset
+
