--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -25,6 +25,7 @@ bindm = SUPER,mouse:273,resizewindow
 
 # Control Services 
 bind = SUPERCTRL,R,exec,killall .waybar-wrapped && waybar & disown
+bind = SUPERCTRL,R,E,exec,killall waybar & disown
 bind = SUPERSHIFT,Q,exit
 bind = SUPERSHIFT,S,exec,systemctl suspend
 bind = SUPERCTRL,L,exec,loginctl lock-session
