--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -25,7 +25,6 @@ bindm = SUPER,mouse:273,resizewindow
 
 # Control Services 
 bind = SUPERCTRL,R,exec,killall .waybar-wrapped && waybar & disown
-bind = SUPERCTRL,R,E,exec,killall waybar & disown
 bind = SUPERSHIFT,Q,exit
 bind = SUPERSHIFT,S,exec,systemctl suspend
 bind = SUPERCTRL,L,exec,loginctl lock-session
@@ -49,10 +48,10 @@ bind = SUPER,9,exec,hyprworkspace 9
 
 # APPS - bringactivetotop
 bind=SUPER,Z,exec,pypr toggle term && hyprctl dispatch bringactivetotop
-bind=SUPER,F,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
+bind=SUPER,R,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
 bind=SUPER,B,exec,pypr toggle btm && hyprctl dispatch bringactivetotop
 bind=SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
-bind=SUPER,N,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
+bind=SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 bind=SUPER,V,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 
 # Menu do FUZZEL 
