--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -51,7 +51,7 @@ bind=SUPER,Z,exec,pypr toggle term && hyprctl dispatch bringactivetotop
 bind=SUPER,R,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
 bind=SUPER,B,exec,pypr toggle btm && hyprctl dispatch bringactivetotop
 bind=SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
-bind=SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
+#bind=SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 bind=SUPER,V,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 
 # Menu do FUZZEL 
