--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -11,7 +11,7 @@ $alttKey = ALT
 # Windows
 bind = $mainMod, Q, killactive
 bind = $mainMod, SPACE, fullscreen, 1
-bind = $mainMod, $shiftKey, F, fullscreen, 0
+#bind = $mainMod, $shiftKey, F, fullscreen, 0
 bind = ALT, TAB, cyclenext
 bind = ALT, TAB, bringactivetotop
 bind = SUPER, T, togglefloating
