--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -11,14 +11,14 @@ $alttKey = ALT
 # Windows
 bind = $mainMod,Q,killactive
 bind = $mainMod,SPACE,fullscreen, 1
-#bind = $mainMod,$shiftKey,F,fullscreen,0
+bind = $mainMod$shiftKey,F,fullscreen,0
 bind = ALT,TAB,cyclenext
 bind = ALT,TAB,bringactivetotop
 bind = SUPER,T,togglefloating
-bind = $mainMod,SHIFT,right,resizeactive,100 0
-bind = $mainMod,SHIFT,left,resizeactive,-100 0
-bind = $mainMod,SHIFT,up,resizeactive,0 -100
-bind = $mainMod,SHIFT,down,resizeactive,0 100
+bind = $mainModSHIFT,right, resizeactive, 100 0
+bind = $mainModSHIFT,left,resizeactive,-100 0
+bind = $mainModSHIFT,up,resizeactive,0 -100
+bind = $mainModSHIFT,down,resizeactive,0 100
 bind = SUPERSHIFT,T,exec,screenshot-ocr
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
