--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -3,22 +3,22 @@
 # ----------------------------------------------------- 
 
 # SUPER KEY
-$mainMod = SUPER
-$shiftKey = SHIFT
-$alttKey = ALT
+# $mainMod = SUPER
+# $shiftKey = SHIFT
+# $alttKey = ALT
 
 
 # Windows
-bind = $mainMod,Q,killactive
-bind = $mainMod,SPACE,fullscreen, 1
-bind = $mainMod$shiftKey,F,fullscreen,0
+bind = SUPER,Q,killactive
+bind = SUPER,SPACE,fullscreen, 1
+bind = SUPERSHIFT,F,fullscreen,0
 bind = ALT,TAB,cyclenext
 bind = ALT,TAB,bringactivetotop
 bind = SUPER,T,togglefloating
-bind = $mainModSHIFT,right, resizeactive, 100 0
-bind = $mainModSHIFT,left,resizeactive,-100 0
-bind = $mainModSHIFT,up,resizeactive,0 -100
-bind = $mainModSHIFT,down,resizeactive,0 100
+bind = SUPERSHIFT, right, resizeactive, 100 0
+bind = SUPERSHIFT,left,resizeactive,-100 0
+bind = SUPERSHIFT,up,resizeactive,0 -100
+bind = SUPERSHIFT,down,resizeactive,0 100
 bind = SUPERSHIFT,T,exec,screenshot-ocr
 bindm = SUPER,mouse:272,movewindow
 bindm = SUPER,mouse:273,resizewindow
@@ -31,10 +31,10 @@ bind = SUPERCTRL,L,exec,loginctl lock-session
 
 
 # Workspaces
-bind=SUPERCTRL,right,exec,hyprnome
-bind=SUPERCTRL,left,exec,hyprnome --previous
-bind=SUPERSHIFT,right,exec,hyprnome --move
-bind=SUPERSHIFT,left,exec,hyprnome --previous --move
+bind = SUPERCTRL,right,exec,hyprnome
+bind = SUPERCTRL,left,exec,hyprnome --previous
+bind = SUPERSHIFT,right,exec,hyprnome --move
+bind = SUPERSHIFT,left,exec,hyprnome --previous --move
 
 bind = SUPER,1,exec,hyprworkspace 1
 bind = SUPER,2,exec,hyprworkspace 2
@@ -47,21 +47,21 @@ bind = SUPER,8,exec,hyprworkspace 8
 bind = SUPER,9,exec,hyprworkspace 9
 
 # APPS - bringactivetotop
-bind=SUPER,Z,exec,pypr toggle term && hyprctl dispatch bringactivetotop
-bind=SUPER,R,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
-bind=SUPER,B,exec,pypr toggle btm && hyprctl dispatch bringactivetotop
-bind=SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
+bind = SUPER,Z,exec,pypr toggle term && hyprctl dispatch bringactivetotop
+bind = SUPER,R,exec,pypr toggle ranger && hyprctl dispatch bringactivetotop
+bind = SUPER,B,exec,pypr toggle btm && hyprctl dispatch bringactivetotop
+bind = SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 #bind=SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
-bind=SUPER,V,exec,pypr toggle code && hyprctl dispatch bringactivetotop
+bind = SUPER,V,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 
 # Menu do FUZZEL 
-bind=SUPER,P,exec,keepmenu
-bind=SUPERSHIFT,P,exec,hyprprofile-dmenu
-bind = $mainMod, P, exec, fuzzel
+bind = SUPER,P,exec,keepmenu
+bind = SUPERSHIFT,P,exec,hyprprofile-dmenu
+bind = SUPER, P, exec, fuzzel
 
 # Passthrough SUPER KEY to Virtual Machine
-bind = $mainMod, P, submap, passthru
-submap = passthru
-bind = SUPER, Escape, submap, reset
-submap = reset
+# bind = $mainMod, P, submap, passthru
+# submap = passthru
+# bind = SUPER, Escape, submap, reset
+# submap = reset
 
