--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -55,9 +55,9 @@ bind = SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 
 
 # Menu do FUZZEL 
-bind = SUPER,P,exec,keepmenu
+#bind = SUPER,P,exec,keepmenu
 bind = SUPERSHIFT,P,exec,hyprprofile-dmenu
-
+bind = SUPER, P, exec, fuzzel
 
 # Passthrough SUPER KEY to Virtual Machine
 # bind = $mainMod, P, submap, passthru
