--- a/user/wm/hyprland/confs/keyboard.conf
+++ b/user/wm/hyprland/confs/keyboard.conf
@@ -6,6 +6,8 @@
 input {
   kb_layout = br
   kb_options = caps:escape
+  kb_variant = thinkpad
+  kb_model = thinkpad60
   repeat_delay = 350
   repeat_rate = 50
   accel_profile = adaptive
