add ajustes desktop

--- a/user/wm/hyprland/confs/autostart.conf
+++ b/user/wm/hyprland/confs/autostart.conf
@@ -12,3 +12,9 @@ exec-once = GOMAXPROCS=1 syncthing --no-browser
 exec-once = protonmail-bridge --noninteractive
 exec-once = waybar
 exec-once = hypridle
+
+# Load cliphist history
+exec-once = wl-paste --watch cliphist store
+
+# Load Dunst Notification Manager
+exec-once = dunst
