--- a/user/wm/hyprland/confs/decoration.conf
+++ b/user/wm/hyprland/confs/decoration.conf
@@ -18,13 +18,16 @@ general {
 }
 
 decoration {
-  rounding = 8
+  rounding = 10
   blur {
     enabled = true
-    size = 5
+    size = 6
     passes = 2
     ignore_opacity = true
     contrast = 1.17
     brightness = 0.8
   }
+  active_opacity = 1.0
+  inactive_opacity = 0.9
+  fullscreen_opacity = 1.0
 }
