--- a/user/wm/hyprland/confs/keyboard.conf
+++ b/user/wm/hyprland/confs/keyboard.conf
@@ -11,5 +11,14 @@ input {
   repeat_delay = 350
   repeat_rate = 50
   accel_profile = adaptive
-  follow_mouse = 2
+  follow_mouse = 1
+  numlock_by_default = true
+  mouse_refocus=false
+
+  touchpad {
+      natural_scroll = false
+  }
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+
+
 }
