--- a/user/wm/hyprland/confs/layout.conf
+++ b/user/wm/hyprland/confs/layout.conf
@@ -3,3 +3,18 @@
 # ----------------------------------------------------- 
 
 layerrule = blur,waybar
+
+
+dwindle {
+    pseudotile = true
+    preserve_split = true
+}
+
+master {
+    new_is_master = true
+}
+
+gestures {
+    workspace_swipe = false
+}
+
