--- a/user/wm/hyprland/confs/windows.conf
+++ b/user/wm/hyprland/confs/windows.conf
@@ -1,3 +1,12 @@
 # ----------------------------------------------------- 
 # Cursor
 # ----------------------------------------------------- 
+
+general {
+    gaps_in = 10
+    gaps_out = 14
+    border_size = 3
+    col.active_border = $color11
+    col.inactive_border = rgba(ffffffff)
+    layout = dwindle
+}
