feat: add print

--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -3,9 +3,9 @@
 # ----------------------------------------------------- 
 
 # SUPER KEY
-# $mainMod = SUPER
-# $shiftKey = SHIFT
-# $alttKey = ALT
+$mainMod = SUPER
+$shiftKey = SHIFT
+$alttKey = ALT
 
 
 # Windows
@@ -54,9 +54,12 @@ bind = SUPER,C,exec,pypr toggle code && hyprctl dispatch bringactivetotop
 bind = SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 
 
+# Actions 
+bind = $mainMod, Y, exec, ~/.dotfiles/user/wm/hyprland/scripts/screenshot.sh   # Screenshot
+bind = $mainMod, V, exec, ~/.dotfiles/user/wm/hyprland/scripts/cliphist.sh          # Clipboard History
+
 # Menu do FUZZEL 
 #bind = SUPER,P,exec,keepmenu
-bind = SUPERSHIFT,P,exec,hyprprofile-dmenu
 bind = SUPER, P, exec, fuzzel
 
 # Passthrough SUPER KEY to Virtual Machine
