test variavel SUPER

--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -54,8 +54,8 @@ bind = SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 
 
 # Actions 
-bind = $mainMod, Y, exec, ~/.dotfiles/user/wm/hyprland/scripts/screenshot.sh   # Screenshot
-bind = $mainMod, V, exec, ~/.dotfiles/user/wm/hyprland/scripts/cliphist.sh          # Clipboard History
+bind = SUPER, Y, exec, ~/.dotfiles/user/wm/hyprland/scripts/screenshot.sh   # Screenshot
+bind = SUPER, V, exec, ~/.dotfiles/user/wm/hyprland/scripts/cliphist.sh     # Clipboard History
 
 # Menu do FUZZEL 
 #bind = SUPER,P,exec,keepmenu
