--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -3,9 +3,9 @@
 # ----------------------------------------------------- 
 
 # SUPER KEY
-$mainMod = SUPER
-$shiftKey = SHIFT
-$alttKey = ALT
+# $mainMod = SUPER
+# $shiftKey = SHIFT
+# $alttKey = ALT
 
 
 # Windows
