--- a/user/wm/hyprland/confs/keybinding.conf
+++ b/user/wm/hyprland/confs/keybinding.conf
@@ -55,7 +55,10 @@ bind = SUPER,F,exec,pypr toggle firefox && hyprctl dispatch bringactivetotop
 
 # Actions 
 bind = SUPER, Y, exec, /home/ins/.dotfiles/user/wm/hyprland/scripts/screenshot.sh   # Screenshot
-bind = SUPER, V, exec, /home/ins/.dotfiles/user/wm/hyprland/scripts/cliphist.sh     # Clipboard History
+#bind = SUPER, V, exec, /home/ins/.dotfiles/user/wm/hyprland/scripts/cliphist.sh     # Clipboard History
+
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -replace -config ~/.dotfiles/user/wm/hyprland/rofi/config-cliphist.rasi | cliphist decode | wl-copy
+
 
 # Menu do FUZZEL 
 #bind = SUPER,P,exec,keepmenu
